Correct the contrast on the menu links on hoover

--- a/widescreen.css
+++ b/widescreen.css
@@ -74,7 +74,7 @@ ul > li > a {
 }
 
 .menu li a:hover {
-  background-color: #7f8cff;
+  background-color: #5263ff;
   color: #fff;
   border-radius: 10px;
 }
